--- a/Unit09/scss/_medium.scss
+++ b/Unit09/scss/_medium.scss
@@ -77,3 +77,7 @@ header h2 {
 #planVisit div:nth-child(2), #planVisit div:nth-child(4) {
   margin-right: 0;
 }
+
+.tile{
+  background-size: unset;
+}
