--- a/Unit09/scss/_small.scss
+++ b/Unit09/scss/_small.scss
@@ -176,13 +176,15 @@ picture div {
 .tile {
     width: 100%;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #planVisit div a {
     display: block;
     text-decoration: none;
+    width: 100%;
     height: 400px;
-    padding: 0 2%;
+    padding: 0;
     color: white;
     transition: all .5s ease-in;
     margin-bottom: 20px;
@@ -192,6 +194,7 @@ picture div {
 
 #planVisit div:nth-child(1) {
     background-image: url("/Unit09/assets/visit1reg.jpg");
+    
 }
 
 #planVisit div:nth-child(1) a {
